--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "arqui-angular-pets-frontend": {
+    "pets-world": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -16,14 +16,15 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/arqui-angular-pets-frontend",
+            "outputPath": "dist/pets-world",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
@@ -69,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "arqui-angular-pets-frontend:build:production"
+              "browserTarget": "pets-world:build:production"
             },
             "development": {
-              "browserTarget": "arqui-angular-pets-frontend:build:development"
+              "browserTarget": "pets-world:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -80,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "arqui-angular-pets-frontend:build"
+            "browserTarget": "pets-world:build"
           }
         },
         "test": {
