--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -1,6 +1,22 @@
-- uses: actions/checkout@v3
-
-# Make changes to pull request here
-
-- name: Create Pull Request
-  uses: peter-evans/create-pull-request@v4
+name: Update MAIN
+on:
+  push:
+    branches:
+      - main
+jobs:
+  updateAuthors:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Update AUTHORS
+        run: |
+          git log --format='%aN <%aE>%n%cN <%cE>' | sort -u > AUTHORS
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v4
+        with:
+          commit-message: update MAIN
+          title: Update MAIN
+          body: Actualización de MAIN
+          branch: update-authors
